updating cb-gl and cb-gl-items

--- a/index.html
+++ b/index.html
@@ -5,3 +5,10 @@
     <a>Menu Item 3</a>
     <a>Menu Item 4</a>
 </cb-menu>
+
+<cb-gl>
+    <cb-gl-item></cb-gl-item>
+    <cb-gl-item></cb-gl-item>
+    <cb-gl-item></cb-gl-item>
+    <cb-gl-item></cb-gl-item>
+</cb-gl>
